Obrisan index.html

--- a/sajt/index.html
+++ b/sajt/index.html
@@ -1,94 +1,1 @@
-<!DOCTYPE html>
-<html lang="sr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>OKK Takovo - Početna</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-
-  <!-- Navigacija -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-      <a class="navbar-brand" href="#">OKK Takovo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Početna</a></li>
-          <li class="nav-item"><a class="nav-link" href="mojtim.html">Moj tim</a></li>
-          <li class="nav-item"><a class="nav-link" href="liga.html">Liga</a></li>
-          <li class="nav-item"><a class="nav-link" href="statistikaigraca.html">Statistika igrača</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Hero sekcija -->
-  <section class="py-5 text-center bg-light">
-    <div class="container">
-      <h1 class="display-4">Dobrodošli na zvanični sajt OKK Takovo</h1>
-      <p class="lead">Pratite rezultate, statistike i vesti vezane za naš klub tokom cele sezone.</p>
-    </div>
-  </section>
-
-  <!-- O klubu -->
-  <section class="container my-5">
-    <h2 class="mb-4">O klubu</h2>
-    <p>
-      OKK Takovo je osnovan sa ciljem da promoviše sport, timski duh i razvoj mladih košarkaša u regionu. Klub je poznat po predanom radu sa omladinom i stalnom težnjom ka uspehu na terenu. Tokom godina, klub je iznedrio brojne talente i beležio značajne uspehe u ligi.
-    </p>
-  </section>
-
-  <!-- Naš tim -->
-  <section class="bg-light py-5">
-    <div class="container">
-      <h2 class="mb-4 text-center">Naš tim</h2>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <img src="images/player1.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 1">
-          <h5>Marko Petrović</h5>
-          <p>Plejmejker</p>
-        </div>
-        <div class="col-md-4">
-          <img src="images/player2.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 2">
-          <h5>Ivan Jovanović</h5>
-          <p>Bek šuter</p>
-        </div>
-        <div class="col-md-4">
-          <img src="images/player3.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 3">
-          <h5>Nemanja Ilić</h5>
-          <p>Centar</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Galerija -->
-  <section class="container my-5">
-    <h2 class="mb-4">Galerija</h2>
-    <div class="row">
-      <div class="col-md-4 mb-3">
-        <img src="images/game1.jpg" class="img-fluid rounded shadow" alt="Utakmica 1">
-      </div>
-      <div class="col-md-4 mb-3">
-        <img src="images/training.jpg" class="img-fluid rounded shadow" alt="Trening">
-      </div>
-      <div class="col-md-4 mb-3">
-        <img src="images/team.jpg" class="img-fluid rounded shadow" alt="Tim OKK Takovo">
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
-    <div class="container">
-      &copy; 2025 OKK Takovo. Sva prava zadržana.
-    </div>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+Obrisan fajl
