--- a/moj-sajt-main/moj-sajt-main/moj-sajt-main/sajt/index.html
+++ b/moj-sajt-main/moj-sajt-main/moj-sajt-main/sajt/index.html
@@ -9,19 +9,15 @@
 <body>
 
   <!-- Navigacija -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
-      <a class="navbar-brand" href="#">OKK Takovo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Početna</a></li>
+      <a class="navbar-brand" href="index.html">OKK Takovo</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="mojtim.html">Moj tim</a></li>
+          <li class="nav-item"><a class="nav-link" href="sekcije.html">Sekcije</a></li>
+          <li class="nav-item"><a class="nav-link" href="uspeh.html">Uspeh</a></li>
           <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
-          <li class="nav-item"><a class="nav-link" href="sekcije.html">Sekcije kluba</a></li>
-          <li class="nav-item"><a class="nav-link" href="uspeh.html">Uspesi tima</a></li>
         </ul>
       </div>
     </div>
