--- a/moj-sajt-main/moj-sajt-main/moj-sajt-main/sajt/sekcije.html
+++ b/moj-sajt-main/moj-sajt-main/moj-sajt-main/sajt/sekcije.html
@@ -10,7 +10,10 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
       <a class="navbar-brand" href="index.html">OKK Takovo</a>
-      <div class="collapse navbar-collapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="mojtim.html">Moj tim</a></li>
           <li class="nav-item"><a class="nav-link active" href="sekcije.html">Sekcije</a></li>
@@ -43,10 +46,14 @@
           <td>1</td>
           <td>11</td>
         </tr>
-        <!-- Dodaj više timova -->
+        <!-- Dodaj više timova ovde -->
       </tbody>
     </table>
 
     <h3>Raspored utakmica</h3>
     <p>Prikaz rasporeda sa mogućnošću filtriranja po datumu i protivniku.</p>
-  <
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
