--- a/moj-sajt-main/sajt/mojtim.html
+++ b/moj-sajt-main/sajt/mojtim.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Moj tim - OKK Takovo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Navigacija -->
@@ -21,7 +22,7 @@
       </div>
     </div>
   </nav>
-
+<main>
   <!-- Sadržaj -->
   <div class="container">
     <h1 class="mb-4">Tim OKK Takovo</h1>
@@ -48,4 +49,14 @@
           <td>KK Borac</td>
           <td>Kući</td>
         </tr>
-        <!-- Dodaj više redova
+</main>
+<footer class="bg-dark text-white text-center py-4 mt-5">
+    <div class="container">
+      <p class="mb-1">&copy; 2025 OKK Takovo. Sva prava zadržana.</p>
+      <p class="mb-0">
+        Pratite nas na 
+        <a href="https://instagram.com/okk.takovo" class="text-white text-decoration-underline" target="_blank">Instagramu</a>
+      </p>
+    </div>
+  </footer>
+
