--- a/moj-sajt-main/sajt/index.html
+++ b/moj-sajt-main/sajt/index.html
@@ -5,28 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>OKK Takovo - Početna</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Navigacija -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
-      <a class="navbar-brand" href="#">OKK Takovo</a>
+      <a class="navbar-brand" href="index.html">OKK Takovo</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Početna</a></li>
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="mojtim.html">Moj tim</a></li>
+          <li class="nav-item"><a class="nav-link" href="sekcije.html">Sekcije</a></li>
+          <li class="nav-item"><a class="nav-link" href="uspeh.html">Uspeh</a></li>
           <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
-          <li class="nav-item"><a class="nav-link" href="sekcije.html">Sekcije kluba</a></li>
-          <li class="nav-item"><a class="nav-link" href="uspeh.html">Uspesi tima</a></li>
         </ul>
       </div>
     </div>
   </nav>
-
+<main>
   <!-- Hero sekcija -->
   <section class="py-5 text-center bg-light">
     <div class="container">
@@ -49,17 +49,17 @@
       <h2 class="mb-4 text-center">Naš tim</h2>
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="images/player1.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 1">
+          <img src="black.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 1">
           <h5>Marko Petrović</h5>
           <p>Plejmejker</p>
         </div>
         <div class="col-md-4">
-          <img src="images/player2.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 2">
+          <img src="black.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 2">
           <h5>Ivan Jovanović</h5>
           <p>Bek šuter</p>
         </div>
         <div class="col-md-4">
-          <img src="images/player3.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 3">
+          <img src="black.jpg" class="img-fluid rounded-circle mb-3" alt="Igrač 3">
           <h5>Nemanja Ilić</h5>
           <p>Centar</p>
         </div>
@@ -72,24 +72,30 @@
     <h2 class="mb-4">Galerija</h2>
     <div class="row">
       <div class="col-md-4 mb-3">
-        <img src="images/game1.jpg" class="img-fluid rounded shadow" alt="Utakmica 1">
+        <img src="black.jpg" class="img-fluid rounded shadow" alt="Utakmica 1">
       </div>
       <div class="col-md-4 mb-3">
-        <img src="images/training.jpg" class="img-fluid rounded shadow" alt="Trening">
+        <img src="black.jpg" class="img-fluid rounded shadow" alt="Trening">
       </div>
       <div class="col-md-4 mb-3">
-        <img src="images/team.jpg" class="img-fluid rounded shadow" alt="Tim OKK Takovo">
+        <img src="black.jpg" class="img-fluid rounded shadow" alt="Tim OKK Takovo">
       </div>
     </div>
   </section>
-
+</main>
   <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
+    <footer class="bg-dark text-white text-center py-4 mt-5">
     <div class="container">
-      &copy; 2025 OKK Takovo. Sva prava zadržana.
+      <p class="mb-1">&copy; 2025 OKK Takovo. Sva prava zadržana.</p>
+      <p class="mb-0">
+        Pratite nas na 
+        <a href="https://instagram.com/okk.takovo" class="text-white text-decoration-underline" target="_blank">Instagramu</a>
+      </p>
     </div>
   </footer>
 
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
