--- a/moj-sajt-main/sajt/sekcije.html
+++ b/moj-sajt-main/sajt/sekcije.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sekcije - OKK Takovo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
@@ -20,7 +21,7 @@
       </div>
     </div>
   </nav>
-
+<main>
   <div class="container">
     <h1 class="mb-4">Liga i sekcije</h1>
 
@@ -49,4 +50,35 @@
 
     <h3>Raspored utakmica</h3>
     <p>Prikaz rasporeda sa mogućnošću filtriranja po datumu i protivniku.</p>
-  <
+    <h3 class="mt-5">Hronologija uspeha po godinama</h3>
+
+<div class="row mb-3">
+  <div class="col-md-3">
+    <input type="number" id="startYear" class="form-control" placeholder="Početna godina">
+  </div>
+  <div class="col-md-3">
+    <input type="number" id="endYear" class="form-control" placeholder="Krajnja godina">
+  </div>
+  <div class="col-md-3">
+    <button onclick="filterByYear()" class="btn btn-primary">Filtriraj</button>
+  </div>
+</div>
+
+<ul id="timeline" class="list-group">
+  <li class="list-group-item timeline-item" data-year="2023">2023 - Juniori osvojili ligu</li>
+  <li class="list-group-item timeline-item" data-year="2022">2022 - Seniori u polufinalu</li>
+  <li class="list-group-item timeline-item" data-year="2021">2021 - Kadeti učestvovali na turniru</li>
+</ul>
+
+    </main>
+    <footer class="bg-dark text-white text-center py-4 mt-5">
+    <div class="container">
+      <p class="mb-1">&copy; 2025 OKK Takovo. Sva prava zadržana.</p>
+      <p class="mb-0">
+        Pratite nas na 
+        <a href="https://instagram.com/okk.takovo" class="text-white text-decoration-underline" target="_blank">Instagramu</a>
+      </p>
+    </div>
+  </footer>
+<script src="uspeh.js"></script>
+</body>
